cmake_minimum_required(VERSION 2.8)
file(GLOB LIBEMREGEX_SOURCES include/*.h lib/*.c)
add_library(libemregex ${LIBEMREGEX_SOURCES})
set_target_properties(libemregex PROPERTIES OUTPUT_NAME emregex)
include_directories(include)
add_executable(emregex src/main.c)
target_link_libraries(emregex libemregex)
enable_testing()
add_test(NAME emregex-test COMMAND test/tester.rb $<TARGET_FILE:emregex>)
